syntax = "proto3";
package university_chain_it.universitychainit;

option go_package = "university_chain_it/x/universitychainit/types";

message ExamsInfo {
  string examName = 1; 
  string examLabel = 2; 
  string examDate = 3; 
  uint64 credits = 4; 
  uint64 marks = 5; 
  uint64 courseYear = 6; 
  bool status = 7; 
  uint64 attendanceYear = 8; 
  uint64 examType = 9; 
  string courseOfStudy = 10; 
  
}

